Modelos concluidos , Swager instalado , Test ejecutado
